More questions, ready and working!

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Totally Trivial Trivia!</h1>
         </div>
         <div class="row">
-            <button id="begin_button">Begin!</button>
+            <button class = "btn" id="begin_button">Begin!</button>
         </div>
 
         <div class="row">
